[gd_scene load_steps=7 format=2]

[ext_resource path="res://overlap/hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://items/all/alien_eyes/alien_eye_projectile.png" type="Texture" id=2]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/characters/marble/marble_projectile.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.1
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_physics_process"
} ]
}

[node name="MarbleProjectile" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 3 )
destroy_on_leaving_screen = false

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="Collision" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fire"
anims/RESET = SubResource( 1 )
anims/fire = SubResource( 2 )

[node name="StopTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ReturnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="critically_hit_something" from="Hitbox" to="." method="_on_Hitbox_critically_hit_something"]
[connection signal="hit_something" from="Hitbox" to="." method="_on_Hitbox_hit_something"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="timeout" from="ReturnTimer" to="." method="_on_ReturnTimer_timeout"]

[editable path="Hitbox"]
